--- a/main.html
+++ b/main.html
@@ -5,12 +5,17 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
+<style>
+	p{width:150px; height:150px; background-color:black; text-color:white; margin-left:32px; padding:10px;}
+	</style>
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<main >
+     <p class="Accio" id="Job">Hello Accio Job</p> 
+		
+	</main>
 </body>
 
 </html>
