--- a/main.html
+++ b/main.html
@@ -12,8 +12,8 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<main >
-     <p class="Accio" id="Job">Hello Accio Job</p> 
+	<main class="accio" id="job">
+     <p class=hello-accio>Hello Accio Job</p> 
 		
 	</main>
 </body>
